--- a/sample-settings.cfg
+++ b/sample-settings.cfg
@@ -1,16 +1,23 @@
-# Cha
+# Change the trigger to reflect the name in the subject line you want your minion to answer to
 TRIGGER="minion"
 
-SMTP_SERVER="smtp.gmail.com"
-SMTP_PORT="587"
+# This email address will approve all requests, and notifications if unauthorized requests are recieved
 APPROVAL_RECIPIENT="YOUR.APPROVER.EMAIL@gmail.com"
+
+# The accounts specified below are allowed make requests
 EMAIL_RECIPIENTS="YOUR.AUTHORIZED.EMAIL@gmail.com"
 
-IMAPSVR="imap.gmail.com"
-IMAPSVR_PRT="993"
+# Specify the account credentials for the mailbox your minion will be monitoring
 USERNAME="MINION.EMAIL.ACCT@gmail.com"
 PASSWORD='MINION.ACCOUNT.PASSWORD'
 
+# Gmail settings
+SMTP_SERVER="smtp.gmail.com"
+SMTP_PORT="587"
+IMAPSVR="imap.gmail.com"
+IMAPSVR_PRT="993"
+
+# Misc paths
 MODFOLDER="./modules"
 TOOLFOLDER="./tools"
 LOGFOLDER="./logs"
