--- a/sample-settings.cfg
+++ b/sample-settings.cfg
@@ -17,6 +17,12 @@ SMTP_PORT="587"
 IMAPSVR="imap.gmail.com"
 IMAPSVR_PRT="993"
 
+# O365 settings
+#SMTP_SERVER="smtp.office365.com"
+#SMTP_PORT="587"
+#IMAPSVR="outlook.office365.com"
+#IMAPSVR_PRT="993"
+
 # Misc paths
 MODFOLDER="./modules"
 TOOLFOLDER="./tools"
